# caselaw

./: .gitignore  404.html  FCRA.md  LICENSE  README.md  convert_dumb_to_smart_quotes.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
arbitration/: index.html
arbitration/faa/: index.html
class_cert/: index.html
class_cert/23b3_types/: index.html
class_cert/adequacy/: index.html
class_cert/ascertainability/: index.html
class_cert/commonality/: index.html
class_cert/injunctive_class/: index.html
class_cert/numerosity/: index.html
class_cert/predominance/: index.html
class_cert/rule23/: index.html
class_cert/typicality/: index.html
docs/: 1_fcra.md  2_class_cert.md  3_standing.md  class_cert.md  index.md
docs/class_cert/: predominance.md  rule23.md
docs/fcra/: damages.md  fcra.md  max_accuracy.md  reinvestigations.md  standing.md  statute.md  willfulness.md
docs/standing/: fcra.md  fdcpa.md
fcra/: index.html
fcra/class_cert/: index.html
fcra/cra/: index.html
fcra/damages/: index.html
fcra/fcra/: index.html
fcra/max_accuracy/: index.html
fcra/reinvestigations/: index.html
fcra/standing/: index.html
fcra/states/: index.html
fcra/statute/: index.html
fcra/willfulness/: index.html
fdcpa/: index.html
fdcpa/class_cert/: index.html
fdcpa/damages/: index.html
fdcpa/standing/: index.html
fdcpa/states/: index.html
fdcpa/statute/: index.html
search/: search_index.json
standing/: index.html
standing/fcra/: index.html
standing/fdcpa/: index.html
tcpa/: index.html
(+9 files in other folders)
