[tool.poetry]
name = "caselaw"
version = "0.1.0"
description = ""
authors = ["Zach Vaughan <85461794+cyrii42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.35"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
